Add object controls on click

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -75,3 +75,12 @@ display: none;
     border: 1px solid;
     box-shadow: none;
 }
+
+.stretched-link {
+    cursor: pointer;
+}
+
+.size-0 {
+    height: 1px;
+    width: 1px;
+}
