--- a/src/custom.scss
+++ b/src/custom.scss
@@ -103,3 +103,7 @@ display: none;
 .custom-nav.active {
     border-bottom: none !important;
 }
+
+.element-2D-active {
+    border: 1px solid var(--bs-code-color);
+}
