--- a/src/custom.scss
+++ b/src/custom.scss
@@ -108,3 +108,52 @@ display: none;
 .element-2D-active {
     border: 1px solid var(--bs-code-color);
 }
+
+.custom-form-control-resource-tab {
+    border: 1px solid inherit;
+    border-width: 0px 0px 1px 0px;
+    border-radius: 0px;
+    padding-left: 0px !important;
+    padding-bottom: 0px !important;
+}
+
+.custom-form-control-resource-tab:focus {
+    border: 1px solid inherit;
+    border-width: 0px 0px 1px 0px;
+    border-radius: 0px;
+    padding-left: 0px !important;
+    padding-bottom: 0px !important;
+}
+
+.custom-form-label {
+    margin-bottom: 15px;
+    position: relative;
+    width: 95%;
+    border-bottom: 1px solid #ddd;
+}
+
+.custom-form-input {
+    padding: 10px 2px;
+    margin-top: 20px;
+    border: none;
+    outline: none;
+    background-color: var(--bs-body-bg);
+}
+
+.custom-form-input::placeholder {
+    opacity: 0;
+}
+
+.custom-form-span {
+    position:absolute;
+    top:0;
+    left:0;
+    transform:translateY(30px);
+    font-size:0.825em;
+    transition-duration:300ms;
+}
+
+.custom-form-label:focus-within > .custom-form-span,
+.custom-form-input:not(:placeholder-shown) + .custom-form-span{
+    transform:translateY(5px);
+}
