--- a/src/custom.scss
+++ b/src/custom.scss
@@ -52,7 +52,7 @@ display: none;
     border-radius: 0.3rem;
 }
 
-.form-control:focus {
+.form-control:focus, .form-select:focus {
     border: 1px solid #555;
     border-bottom: 1px solid #888 !important;
     box-shadow: none;
